[package]
name = "pipenv-rs"
version = "0.1.0"
authors = ["Jacob Haslehurst <jacob@haslehurst.net>"]

[dependencies]
reqwest = "0.8"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
clap = {version = "2.24", features = ["yaml"]}
toml = "0.4"
semver = "0.8"
regex = "0.2"
lazy_static = "0.2"
tar = "0.4"
flate2 = "0.2"
rayon = "0.8"
zip = "0.2"
error-chain = "0.11"
